# HelloWorld

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  HelloWorld  Jenkinsfile  Makefile  README.md  jenkinsfile  rats_report.xml  result_cppcheck.xml  sonar-project.properties
include/: testheader.h
src/: HelloWorld.cpp  testfile.cpp
test/: Main_TestAll.cpp  testheader_test.cpp
